WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
174219
[iOS DnD] For cross-app drags, 'drop' event handlers are never invoked if dataTransfer.dropEffect is not set while dragging
https://bugs.webkit.org/show_bug.cgi?id=174219
Summary
[iOS DnD] For cross-app drags, 'drop' event handlers are never invoked if dat...
Wenson Hsieh
Reported
2017-07-06 15:01:44 PDT
<
rdar://problem/32083177
>
Attachments
Patch
(23.42 KB, patch)
2017-07-06 15:57 PDT
,
Wenson Hsieh
rniwa
: review+
Details
Formatted Diff
Diff
Patch for landing
(23.44 KB, patch)
2017-07-07 14:20 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2017-07-06 15:57:25 PDT
Created
attachment 314766
[details]
Patch
Ryosuke Niwa
Comment 2
2017-07-07 14:08:43 PDT
Comment on
attachment 314766
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=314766&action=review
> Source/WebCore/ChangeLog:20 > + Tests: > + DataInteractionTests.ExternalSourceHTMLToUploadArea > + DataInteractionTests.ExternalSourceImageAndHTMLToUploadArea > + DataInteractionTests.ExternalSourceMoveOperationNotAllowed
We usually have the first test listed after "Tests: " and the rest indented to align with the first test
> Source/WebCore/page/mac/DragControllerMac.mm:113 > + // On iOS, UIKit skips the -performDrop invocation altogether if MOVE is forbidden. Thus, > + // if MOVE is not allowed in the drag source operation mask, fall back to only other allowable > + // action, COPY.
Can we wrap lines after "forbidden." instead of after "Thus," to make it read better?
Wenson Hsieh
Comment 3
2017-07-07 14:14:06 PDT
Comment on
attachment 314766
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=314766&action=review
Thanks!
>> Source/WebCore/ChangeLog:20 >> + DataInteractionTests.ExternalSourceMoveOperationNotAllowed > > We usually have the first test listed after "Tests: " and the rest indented to align with the first test
Got it -- fixed.
>> Source/WebCore/page/mac/DragControllerMac.mm:113 >> + // action, COPY. > > Can we wrap lines after "forbidden." instead of after "Thus," to make it read better?
Sure! Done.
Wenson Hsieh
Comment 4
2017-07-07 14:20:00 PDT
Created
attachment 314878
[details]
Patch for landing
WebKit Commit Bot
Comment 5
2017-07-07 14:59:29 PDT
Comment on
attachment 314878
[details]
Patch for landing Clearing flags on attachment: 314878 Committed
r219271
: <
http://trac.webkit.org/changeset/219271
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug